<b>2009-01-19</b>

* Pressing "ENTER" after password submits log in form.
* Stats cleared out ("Loading...") during login/logout process.

<b>2009-01-15</b>

* Username lowercased before password hashing.  "Legacy" passwords still recognized.

<b>2009-01-12</b>

* Challenge-handshake authentication now implemented (password no longer sent in clear)
* Move to top of settings/signup screen on any error
* Bug: Linefeed, carriage return, tab now filtered out from flight notes
* Bug: Do not accept empty as new password

<b>2009-01-08</b>

* "Keep historical airline names?" now preserves FlightMemory airline names as is
* scriptaculous loading optimized (6 HTTP requests less)
* blank.gif added for OpenLayers 
* Bug: Multiple matches for airline names now processed correctly

<b>2009-01-07</b>

* Bug: Blank class, reason no longer assigned defaults when edited
* Bug: Autocompletion of airline in Detailed editor fixed

<b>2009-01-06</b>

* OpenFlights Delta released!
* OpenFlights blog and "Elite" donation/level system launched
* New, large, user-friendly settings screen, with Elite Gold options implemented
* Password-protected private profiles implemented
* Adjustments to button layout for Basic editor
* Bug: Fixes to Top 10 stats formatting (2484923)
* Bug: Trip filter works again
* Bug: Advanced airline search for Basic editor fixed
* Bug: Callsigns now work in advanced airline search
* Bug: Help button no longer displayed when not available