@@ -29,7 +29,11 @@
 		    <td class="value"><INPUT type="text" name="myurl" style="border:none" size="40" READONLY>
 		      <input type="text" name="count" value="" style="border: none" READONLY></td>
 		    <td class="desc">The public address of your profile and how often it has been viewed.</td>
-		    <td class="value" rowspan=4><span id="eliteicon"></span>
+		    <td class="value" rowspan=3><span id="eliteicon"></span>
+		  </tr><tr>
+		    <td class="key">Facebook link</td>
+		    <td class="value"><span id="facebook"><i>Checking...</i></span></td>
+		    <td class="desc">Install the <a href="http://apps.facebook.com/openflights">OpenFlights Facebook app</a> to update your flights to your <a href="http://facebook.com">Facebook</a> profile.</td>
 		  </tr><tr>
 		    <td class="key">E-mail <i>(optional)</i>&nbsp;&nbsp;</td>
 		    <td class="value"><INPUT type="text" name="email" size="20"></td>
