@@ -31,7 +31,7 @@
 
 	    <div id="news" style="display: none">
 	      <img src="/img/close.gif" height=17 width=17 onClick='JavaScript:closeNews()'> 
-	      <B>News</b>: 15 Jan 2009: <a href="/about.html#CHANGES">Username no longer case sensitive for new accounts or after password change.<br>Please report any problems logging in or changing password.</a>
+	      <B>News</b>: 21 Jan 2009: <a href="http://apps.facebook.com/openflights/">Facebook application</a> launched!<br>Share your flight stats in your Facebook profile and let your friends know when you add new flights.</a>
 	    </div>
 	    
 	    <div id="ajaxloader">
